--- a/society-frontend/package.json
+++ b/society-frontend/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://lit-headland-48684.herokuapp.com",
   "eslintConfig": {
     "extends": "react-app"
   },
